fix form button color on mobile

--- a/imports/client/styles/components/_form.scss
+++ b/imports/client/styles/components/_form.scss
@@ -35,6 +35,7 @@
     font-weight: 900;
     color: #2f3640;
     outline: none;
+    background-color: #fff;
   }
 
   label {
